<resources>
    <string name="app_name">Exotica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NIT,BBSR</string>
    <string name="nav_header_subtitle">nitbbsr_2007@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Events</string>
    <string name="title_notifications">Results</string>
    <string name="title_activity_robotics">ROBOTICS</string>
    <string name="title_activity_education">LITERARY-EVENTS</string>
    <string name="title_activity_cultural">CULTURAL EVENTS</string>
    <string name="title_activity_sports">SPORTS</string>
    <string name="title_activity_carrom">CARROM</string>
    <string name="title_activity_cricket">CRICKET</string>
    <string name="title_activity_chess">CHESS</string>
    <string name="title_activity_khokho">KHO-KHO</string>
    <string name="title_activity_kabaddi">KABADDI</string>
    <string name="title_activity_pubg">PUBG</string>
    <string name="title_activity_counter_strike">COUNTER-STRIKE</string>
    <string name="title_activity_nfs">NFS-MOST WANTED</string>
    <string name="title_activity_tabletennis">TABLE-TENNIS</string>
    <string name="title_activity_tugofwar">TUG-OF-WAR</string>
    <string name="title_activity_volleyball">VOLLEYBALL</string>
    <string name="title_activity_musical">MUSICAL CHAIRS</string>
    <string name="rules_and_regulation">Rules and Regulation</string>
    <string name="carrom">\n\n1. Participant can be individual or in pairs of own choice.
        \n\n2.It is complete knock-out tournament.
        \n\n3.Everybody must be present 15 minutes before his/her match in order to avoid forfeit.
        \n\n4.No entries are entertained after the completion of 1st round of the tournament.
        \n\n5.Detailed rules:-
        \n\ni) Striking:-
        \n\n *)A Striker within the baseline must touch both the front line and the rear line.
        \n\n *)The striker may not cut the moon- be placed partially within the baseline and partially within the circle
        \n\n *)The player must flick the striker with one finger so that it crosses the front baseline- it is not permitted to flick backwards or horizontally.
        \n\n *)A piecce that is on or behind the front baseline must not be struck by the striker until the striker has crossed the front baseline.
        \n\n *)In striking the players hand or arm must not cross the diagonal foul lines at either end of the baseline.
        \n\nii)Fouls/Penalty-
        \n\na)A foul is recorded in the following situations:-
        \n\n*)The striker is pocketed.
        \n\n*)The striker or any other piece leaves the board.
        \n\n*)A player pockets an opponents piece.Regardless of whether the queen has been covered, the opponents piece is returned to the center in addition to the penalty piece.
        \n\n*)A player contravenes the rules for striking.
        \n\n*)A player touches any piece in play, other than the striker.
        \n\n*)The first player to strike fails to break the counters in three attempts.
        \n\n7.All league matches will be of 10 minutes but semi-final and final will be of 15 minutes.
        \n\n8.If there will be a tie then there will be again a match of 3 minutes.
        \n\n9.On the point basis winner will be declared.
        \n\n10.The participants must be present at the venue at the time of the event.Any absence without notifying the event co-ordinators will result in forfeit.
        \n\n11.The decision of the judges/ co-ordinators shall be final and binding on all participants.\n\n\n
    </string>
    <string name="carromvenue">\n-Date:
        \n\n-Time:
    </string>
    <string name="carromcoordinator">\n1.
        \n\n2.
        \n\n3.
    </string>
    <string name="rules_regulations">Rules $ Regulations</string>
    <string name="chess">\n\n1.Individual participation.
    \n\n2.Game will be played according to the authorised blitz(rapid) tournament.
    \n\n3.Everybody must be present 15 minutes before his/her match in order to avoid walkover.
    \n\n4.No entries are entertained after the completion of 1st round of the tournament.
    \n\n5.Total time for match is of 16 minutes.
    \n\n6.Each player will be given total time of 8 minutes to think and make moves.
    \n\n7.The one whose time gets out first will lose irrespective of situation of the game.
    \n\n8.The participant must be present at the venue at the time of the event. Any absence without notifying the event co-ordinators will result in forfeit.
    \n\n9.If the player wins on the board before time, then time will not be taken into account.
    \n\n10.Each volunteers will record time for both the players.
    \n\n11.The decision of the judges/co-ordinators shall be final and binding on all participants.\n\n\n</string>
    <string name="chessvenue">\n\n-Date:
        \n\n-Time:</string>
    <string name="chesscoordinator">\n1.
        \n\n2.
        \n\n3.</string>
    <string name="cricketcoordinator">\n1.
        \n\n2.
        \n\n3.</string>
    <string name="cricketvenue">\n\n-Date:
        \n\n-Time:</string>
    <string name="cricket">\n\n1.Branch wise participation is only allowed.
    \n\n2.Each branch will have 15 members in the team.
    \n\n3.Registration is only done through their respective departments.
    \n\n4.The league matches will be 12 overs each and the FINAL will be 15 overs each.
    \n\n5.Each inning must be completed in 50 minutes.Penalty will be imposed if the bowling team takes more time to complete thier quota.The net run rate will be deducted for the respective team.
    \n\n6.The standard ICC rules will be followed.
    \n\n7.The POWERPLAY field restrictions will be applied for first 3 Overs and for the FINAL it will be applied for the first 4 Overs.
    \n\n8.Bowling restrictions:2 bowlers will bowl 3 Overs each and the rest will bowl 2 Overs each.For the final each bowler will bowl no more than 3 Overs.
    \n\n9.In case of a tie, a super over will be played.
    \n\n10.Super over rules are as follow:-
        \n\n*No field restrictions, 3 batsmen and 1 bowler are to be selected.
    \n\n11.The team which fails to make it in time for the match will be forced to forfeit.
        \n\n12.The decision of the umpires/co-ordinators shall be final and building on all participants.\n\n\n</string>
    <string name="dancecoordinator">\n1.
        \n\n2.
        \n\n3.</string>
    <string name="dancevenue">\n\n-Date:
        \n\n-Time:</string>
    <string name="dance">\n\n1.Individual participation.
    \n\n2.Time to perform will be 4 minutes maximum. Negative points for exceeding the time limit.
    \n\n3.The participants are requested to bring their song/music in a storage device and also requested to submit it to the coordinator of the event to avoid technical disturbance.
    \n\n4.The participants will be judged on their costumes, visual presentation and dance form. There is no particular theme.
    \n\n5.Participants should get their own props. All props must be specified to the event coordinator.
    \n\n6.Lighting of matchsticks, candles and cigarettes or any derogatory acts are strictly not allowed on stage.
    \n\n7.Choice of song is open to the particpants.
    \n\n8.Any obscene / offensive music /song is not allowed.
    \n\n9.The participants must be present at the venue before 10 to 15 minutes of event. Any absence without notifying the event co-ordinators will result in forfeit.
    \n\n10.The decision of the judges/co-ordinators shall be final and building on all participants.\n\n\n</string>
    <string name="writtingcoordinator">\n1.
        \n\n2.
        \n\n3.</string>
    <string name="writtingvenue">\n\n-Date:
        \n\n-Time:</string>
    <string name="writting">\n\n1.Individual participation.
    \n\n2.Topic will be given on the spot.
    \n\n3.Participants have to only come with their writting materials.
    \n\n4.Sheet for writting will be provided by college.
        \n\n5.Time alloted - 45 mins only for writting the essay.
        \n\n6.Maximum word limit upto 1500 words.
    \n\n7.The participants must be present at the venue before 10 to 15 mins of event. Any absence without notifying the event co-ordinators will resut in forfeit.
    \n\n8.The decision of the judges/co-ordinators shall be final and building on all participants.\n\n\n</string>
    <string name="ques1"><font fgcolor="#E80051F3">Q1.</font><font fgcolor='#D0F899'> What is Exotica???</font></string>
    <string name="ans1"><font fgcolor='#FDB9B9'> Exotica, the Annual Techno-Management Fest
    \n  of Nalanda Institute of Technology,
    \n  Bhubaneswar is our biggest college
    \n  festival.
    \n  It will span for 5 days.
    \n  The spirit of Exotica lies in Encouraging sound practices, making
    \n  precsion engineering a way of life,
    \n  Effectively bringing about a paradigm
    \n  shift from classroom  to path-breaking innovation.</font></string>
    <string name="ques2"><font fgcolor="#E80051F3">Q2.</font><font fgcolor='#D0F899'> What are the types of events in Exotica???</font></string>
    <string name="ans2"><font fgcolor='#FDB9B9'> Exotica is plethora of many events.
    \n It includes branch events, gaming events ,
    \n formal events , fun events , etc.</font></string>
    <string name="ques3"><font fgcolor="#E80051F3">Q3.</font><font fgcolor='#D0F899'> How can you participate???</font></string>
    <string name="ans3"><font fgcolor='#FDB9B9'> You can get register through this app
    \n on pariticular events.</font></string>
    <string name="ques4"><font fgcolor="#E80051F3">Q4.</font><font fgcolor='#D0F899'> Are there any online events???</font></string>
    <string name="ans4"><font fgcolor='#FDB9B9'> No, there is no online events.</font></string>
    <string name="ques5"><font fgcolor="#E80051F3">Q5.</font><font fgcolor='#D0F899'> Is there any special arrangement of bus for girls during DJ night of Exotica???</font></string>
    <string name="ans5"><font fgcolor='#FDB9B9'> Yes! Girls would be provided a Bus and a special mirror environment after the sunset.</font></string>
    <string name="ques6"><font fgcolor="#E80051F3">Q6.</font><font fgcolor='#D0F899'> Still have a query???</font></string>
    <string name="ans6"><font fgcolor='#FDB9B9'> Contact:-
        \n Lalit Prasad -</font> <font fgcolor= '#000'>9304864742</font></string>
</resources>